--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">ТестовыйТест</h1>
+    <h1 class="display-4">ТестовыйТест 01</h1>
     <img src="https://66.media.tumblr.com/8559d631e0a81a520ebd382c26b855b9/tumblr_p5g83shqSt1vmobp0o1_1280.jpg" />
     <p>Тестовая ссылочка <a href="https://vk.com/id612004776">building Web apps with ASP.NET Core</a>.</p>
 </div>
